--- a/IdentityCore/Views/ApplicationAspNetUserRoles/Index.cshtml
+++ b/IdentityCore/Views/ApplicationAspNetUserRoles/Index.cshtml
@@ -33,7 +33,7 @@
             </td>
             <td>
                 
-                <a asp-action="Edit" asp-route-id="@item.RoleId + @item.UserId">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.RoleId, @item.UserId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.RoleId, @item.UserId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.RoleId, @item.UserId">Delete</a>
 
