--- a/IdentityCore/Views/ApplicationUsers/Create.cshtml
+++ b/IdentityCore/Views/ApplicationUsers/Create.cshtml
@@ -48,6 +48,11 @@
                 <input asp-for="Country" class="form-control" />
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
             <!--
     <div class="form-group">
         <label asp-for="ConcurrencyStamp" class="control-label"></label>
