--- a/IdentityCore/Views/ApplicationUsers/Delete.cshtml
+++ b/IdentityCore/Views/ApplicationUsers/Delete.cshtml
@@ -54,6 +54,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Country)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
