--- a/IdentityCore/Views/ApplicationUsers/Details.cshtml
+++ b/IdentityCore/Views/ApplicationUsers/Details.cshtml
@@ -53,6 +53,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Country)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
     </dl>
 </div>
 <div>
