--- a/IdentityCore/Views/ApplicationUsers/Create.cshtml
+++ b/IdentityCore/Views/ApplicationUsers/Create.cshtml
@@ -49,7 +49,7 @@
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
